Character movement implemented

--- a/Chess_CPP/Chess_CPP.vcxproj
+++ b/Chess_CPP/Chess_CPP.vcxproj
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Action.cpp" />
     <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Chess_CPP.cpp" />
+    <ClCompile Include="DangerZone.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="King.cpp" />
     <ClCompile Include="Knight.cpp" />
@@ -143,9 +143,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Action.h" />
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Character.h" />
+    <ClInclude Include="DangerZone.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="King.h" />
     <ClInclude Include="Knight.h" />
