--- a/Chess_CPP/Chess_CPP.vcxproj.filters
+++ b/Chess_CPP/Chess_CPP.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClCompile Include="Player.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="King.cpp">
-      <Filter>Quelldateien\Characters</Filter>
-    </ClCompile>
     <ClCompile Include="Queen.cpp">
       <Filter>Quelldateien\Characters</Filter>
     </ClCompile>
@@ -51,8 +48,11 @@
     <ClCompile Include="Rook.cpp">
       <Filter>Quelldateien\Characters</Filter>
     </ClCompile>
-    <ClCompile Include="Action.cpp">
+    <ClCompile Include="DangerZone.cpp">
       <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="King.cpp">
+      <Filter>Quelldateien\Characters</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -64,9 +64,6 @@
     </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="King.h">
-      <Filter>Headerdateien\Characters</Filter>
     </ClInclude>
     <ClInclude Include="Character.h">
       <Filter>Headerdateien</Filter>
@@ -86,8 +83,11 @@
     <ClInclude Include="Rook.h">
       <Filter>Headerdateien\Characters</Filter>
     </ClInclude>
-    <ClInclude Include="Action.h">
+    <ClInclude Include="DangerZone.h">
       <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="King.h">
+      <Filter>Headerdateien\Characters</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
