Implemented: Test class

--- a/Chess_CPP/Chess_CPP.vcxproj
+++ b/Chess_CPP/Chess_CPP.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
     <ClCompile Include="Bishop.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Chess_CPP.cpp" />
@@ -138,11 +139,13 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Rook.cpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
     <ClInclude Include="Bishop.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="DangerZone.h" />
@@ -152,7 +155,12 @@
     <ClInclude Include="Pawn.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Queen.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Rook.h" />
+    <ClInclude Include="Test.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Chess_CPP.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
