--- a/Chess_CPP/Chess_CPP.vcxproj.filters
+++ b/Chess_CPP/Chess_CPP.vcxproj.filters
@@ -54,6 +54,12 @@
     <ClCompile Include="King.cpp">
       <Filter>Quelldateien\Characters</Filter>
     </ClCompile>
+    <ClCompile Include="Action.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -89,5 +95,19 @@
     <ClInclude Include="King.h">
       <Filter>Headerdateien\Characters</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Action.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Chess_CPP.rc">
+      <Filter>Ressourcendateien</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
