Movement implementation via console

--- a/Chess_CPP/Chess_CPP.vcxproj.filters
+++ b/Chess_CPP/Chess_CPP.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Test.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerMoves.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -102,6 +105,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Test.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerMoves.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
