Update: Suizide check

--- a/Chess_CPP/packages.config
+++ b/Chess_CPP/packages.config
@@ -10,5 +10,11 @@
   <package id="sdl2.v140.redist" version="2.0.4" targetFramework="native" />
   <package id="sdl2_image.v140" version="2.0.1" targetFramework="native" />
   <package id="sdl2_image.v140.redist" version="2.0.1" targetFramework="native" />
+  <package id="sfml-graphics" version="2.4.2.0" targetFramework="native" />
+  <package id="sfml-graphics.redist" version="2.4.2.0" targetFramework="native" />
+  <package id="sfml-system" version="2.4.2.0" targetFramework="native" />
+  <package id="sfml-system.redist" version="2.4.2.0" targetFramework="native" />
+  <package id="sfml-window" version="2.4.2.0" targetFramework="native" />
+  <package id="sfml-window.redist" version="2.4.2.0" targetFramework="native" />
   <package id="zlib.v140.windesktop.msvcstl.dyn.rt-dyn" version="1.2.8.8" targetFramework="native" />
 </packages>
