--- a/Chess_CPP/Chess_CPP.vcxproj
+++ b/Chess_CPP/Chess_CPP.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Pawn.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerMoves.cpp" />
+    <ClCompile Include="Prediction.cpp" />
     <ClCompile Include="Queen.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Rook.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Pawn.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerMoves.h" />
+    <ClInclude Include="Prediction.h" />
     <ClInclude Include="Queen.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
