--- a/Chess_CPP/Chess_CPP.vcxproj.filters
+++ b/Chess_CPP/Chess_CPP.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Prediction.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -114,6 +117,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Renderer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Prediction.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
